--- a/bin/fxml/TraceViewer.fxml
+++ b/bin/fxml/TraceViewer.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -106,6 +107,23 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
+                  <ProgressIndicator fx:id="progressIndicatorFilter" visible="false" />
+               </children>
+            </HBox>
+            <Pane prefHeight="15.0" prefWidth="680.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="680.0">
+               <children>
+                  <ImageView fx:id="imgFilter" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                     <image>
+                        <Image url="@../../bin/resources/images/correct.png" />
+                     </image>
+                  </ImageView>
+                  <Pane prefHeight="20.0" prefWidth="6.0" />
+                  <Label fx:id="lblFilter" prefHeight="40.0" prefWidth="430.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </HBox>
          </children>
