--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -91,7 +92,7 @@
             <Separator prefWidth="200.0" />
          </children>
       </VBox>
-      <VBox layoutX="10.0" layoutY="144.0" prefHeight="120.0" prefWidth="680.0" AnchorPane.bottomAnchor="318.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
+      <VBox layoutX="10.0" layoutY="144.0" prefHeight="214.0" prefWidth="680.0" AnchorPane.bottomAnchor="224.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
          <children>
             <Label prefHeight="34.0" prefWidth="451.0" text="Filter" textFill="#aa14c4">
                <font>
@@ -126,7 +127,50 @@
                   </Label>
                </children>
             </HBox>
+            <Pane prefHeight="102.0" prefWidth="680.0">
+               <children>
+                  <VBox layoutX="14.0" layoutY="10.0">
+                     <children>
+                        <Label prefHeight="23.0" prefWidth="142.0" text="Customise  Filter">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <HBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="Sequence length" />
+                              <Pane prefHeight="34.0" prefWidth="12.0" />
+                              <ChoiceBox prefHeight="25.0" prefWidth="93.0" />
+                              <Pane prefHeight="34.0" prefWidth="4.0" />
+                              <ChoiceBox prefHeight="25.0" prefWidth="48.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="419.0">
+                           <children>
+                              <Label text="Contains action(s)" />
+                              <Pane prefHeight="34.0" prefWidth="4.0" />
+                              <TextField prefHeight="25.0" prefWidth="321.0" promptText="action1, action2, ...">
+                                 <tooltip>
+                                    <Tooltip text="action names separated by comma" />
+                                 </tooltip>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="Action occurence" />
+                              <Pane prefHeight="34.0" prefWidth="9.0" />
+                              <TextField prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
+                              <Pane prefHeight="34.0" prefWidth="3.0" />
+                              <Label text="\%" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
          </children>
       </VBox>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="130.0" layoutX="14.0" layoutY="266.0" stroke="BLACK" strokeType="INSIDE" width="459.0" />
    </children>
 </AnchorPane>
